--- a/BlazorUserApp.Client/wwwroot/css/app.css
+++ b/BlazorUserApp.Client/wwwroot/css/app.css
@@ -112,3 +112,7 @@ code {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.users-table tbody tr td {
+    vertical-align: middle;
+}
